Closed
Bug 907117
Opened 12 years ago
Closed 12 years ago
IonMonkey: build failed with DEBUG turned on
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla26
People
(Reporter: kanru, Assigned: kanru)
References
Details
(Keywords: regression)
Attachments
(1 file, 2 obsolete files)
|
1.27 KB,
patch
|
kanru
:
review+
|
Details | Diff | Splinter Review |
js/src/builtin/TestingFunctions.cpp: In function 'bool EnableOsiPointRegisterChecks(JSContext*, unsigned int, jsval*)':
js/src/builtin/TestingFunctions.cpp:899: error: 'js_IonOptions' is not a member of 'js::ion'
and
js/src/vm/Stack.h:1300: error: 'RegisterDump' does not name a type
js/src/vm/Stack.h: In static member function 'static size_t js::ion::JitActivation::offsetOfRegs()':
js/src/vm/Stack.h:1330: error: 'class js::ion::JitActivation' has no member named 'regs_'
| Assignee | ||
Comment 1•12 years ago
|
||
Attachment #792730 -
Flags: review?(nicolas.b.pierron)
Comment 2•12 years ago
|
||
I think it'd be better to change the definition of CHECK_OSIPOINT_REGISTERS (in IonTypes.h) so that it's only defined if JS_ION is defined.
| Assignee | ||
Comment 3•12 years ago
|
||
That works too.
Attachment #792730 -
Attachment is obsolete: true
Attachment #792730 -
Flags: review?(nicolas.b.pierron)
Attachment #792738 -
Flags: review?(jdemooij)
Comment 4•12 years ago
|
||
You should be able to remove the vm/Stack.h change when you do that, or am I missing something?
| Assignee | ||
Comment 5•12 years ago
|
||
Hmm.. right. So does it include Registers.h somewhere when JS_ION and DEBUG are both defined?
Comment 6•12 years ago
|
||
Comment on attachment 792738 [details] [diff] [review]
Path v2
Review of attachment 792738 [details] [diff] [review]:
-----------------------------------------------------------------
The explicit Registers.h #include is okay I think. Thanks for fixing this!
Attachment #792738 -
Flags: review?(jdemooij) → review+
| Assignee | ||
Updated•12 years ago
|
Keywords: checkin-needed
| Assignee | ||
Updated•12 years ago
|
Keywords: checkin-needed
| Assignee | ||
Comment 7•12 years ago
|
||
Assignee: general → kchen
Attachment #792738 -
Attachment is obsolete: true
Attachment #792984 -
Flags: review+
Comment 9•12 years ago
|
||
Keywords: checkin-needed
Comment 10•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
You need to log in
before you can comment on or make changes to this bug.
Description
•