Bug 907117 - IonMonkey: Fix build failure with DEBUG turned on. r=jandem