js/src/jit/IonTypes.h
@@ -207,7 +207,9 @@ IsNullOrUndefined(MIRType type)
 
 // Make sure registers are not modified between an instruction and
 // its OsiPoint.
-#define CHECK_OSIPOINT_REGISTERS 1
+#  ifdef JS_ION
+#    define CHECK_OSIPOINT_REGISTERS 1
+#  endif
 #endif
 
 } // namespace ion
